tests/ui/union/unnamed-fields/field_uniqueness_check.stderr
error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:27:5
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |     a: u8,
   |     ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:30:9
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:31:9
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:36:13
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:40:5
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:40:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:41:5
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:41:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:44:9
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:44:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:45:9
   |
LL |     a: u8,
   |     ----- `a` first declared here
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:45:9
   |
LL |         _: Bar,
   |         ^^^^^^

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:58:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:61:13
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:66:17
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |                 a: u8,
   |                 ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:70:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:70:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:71:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:71:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:74:13
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |             _: Foo,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:74:13
   |
LL |             _: Foo,
   |             ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:75:13
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |             _: Bar,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:75:13
   |
LL |             _: Bar,
   |             ^^^^^^

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:80:5
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |     a: u8,
   |     ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:83:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:88:13
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:92:5
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:92:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:93:5
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:93:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:96:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:96:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:97:9
   |
LL |         a: u8,
   |         ----- `a` first declared here
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:97:9
   |
LL |         _: Bar,
   |         ^^^^^^

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:111:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:114:17
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |                 a: u8,
   |                 ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:119:21
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |                     a: u8,
   |                     ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:123:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             _: Foo,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:123:13
   |
LL |             _: Foo,
   |             ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:124:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             _: Bar,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:124:13
   |
LL |             _: Bar,
   |             ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:127:17
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |                 _: Foo,
   |                 ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:127:17
   |
LL |                 _: Foo,
   |                 ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:128:17
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |                 _: Bar,
   |                 ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:128:17
   |
LL |                 _: Bar,
   |                 ^^^^^^

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:133:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:136:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:141:17
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |                 a: u8,
   |                 ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:145:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:145:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:146:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:146:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:149:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             _: Foo,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:149:13
   |
LL |             _: Foo,
   |             ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:150:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             _: Bar,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:150:13
   |
LL |             _: Bar,
   |             ^^^^^^

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:154:5
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |     a: u8,
   |     ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:157:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         a: u8,
   |         ^^^^^ field already declared

error[E0124]: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:162:13
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |             a: u8,
   |             ^^^^^ field already declared

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:166:5
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:166:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:167:5
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:167:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:170:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:170:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:171:9
   |
LL |             a: u8,
   |             ----- `a` first declared here
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:171:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:183:5
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |     a: u8,
   |     ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:186:9
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:191:13
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:195:5
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:195:5
   |
LL |     _: Foo,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:196:5
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:196:5
   |
LL |     _: Bar,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:199:9
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:199:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:200:9
   |
LL |     _: Foo,
   |     ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:200:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:180:5
   |
LL |     _: Foo,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:212:5
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |     a: u8,
   |     ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:215:9
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:220:13
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:224:5
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:224:5
   |
LL |     _: Foo,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:225:5
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:225:5
   |
LL |     _: Bar,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:228:9
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:228:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:229:9
   |
LL |     _: Bar,
   |     ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:229:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:209:5
   |
LL |     _: Bar,
   |     ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:242:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:245:13
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:250:17
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |                 a: u8,
   |                 ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:254:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:254:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:255:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:255:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:258:13
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |             _: Foo,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:258:13
   |
LL |             _: Foo,
   |             ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:259:13
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |             _: Bar,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:259:13
   |
LL |             _: Bar,
   |             ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:264:5
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |     a: u8,
   |     ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:267:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:272:13
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:276:5
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:276:5
   |
LL |     _: Foo,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:277:5
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:277:5
   |
LL |     _: Bar,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:280:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:280:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:281:9
   |
LL |         _: Foo,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:281:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:239:9
   |
LL |         _: Foo,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:294:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:297:13
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:302:17
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |                 a: u8,
   |                 ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:306:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:306:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:307:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:307:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:310:13
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |             _: Foo,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:310:13
   |
LL |             _: Foo,
   |             ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:311:13
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |             _: Bar,
   |             ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:311:13
   |
LL |             _: Bar,
   |             ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:316:5
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |     a: u8,
   |     ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:319:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         a: u8,
   |         ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:324:13
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |             a: u8,
   |             ^^^^^ field already declared
   |
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:328:5
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |     _: Foo,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:328:5
   |
LL |     _: Foo,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:329:5
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |     _: Bar,
   |     ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:329:5
   |
LL |     _: Bar,
   |     ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:332:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Foo,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:7:5
   |
LL |     a: u8,
   |     ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:332:9
   |
LL |         _: Foo,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: field `a` is already declared
  --> $DIR/field_uniqueness_check.rs:333:9
   |
LL |         _: Bar,
   |         ------ `a` first declared here in this unnamed field
...
LL |         _: Bar,
   |         ^^^^^^ field `a` declared in this unnamed field
   |
note: field `a` declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:333:9
   |
LL |         _: Bar,
   |         ^^^^^^
note: field `a` first declared here
  --> $DIR/field_uniqueness_check.rs:14:9
   |
LL |         a: u8,
   |         ^^^^^
help: fields from the type of this unnamed field are considered fields of the outer type
  --> $DIR/field_uniqueness_check.rs:291:9
   |
LL |         _: Bar,
   |         ^^^^^^

error: aborting due to 85 previous errors

For more information about this error, try `rustc --explain E0124`.
